# Cosc422

./: ik.py
assignment-1-part2/: CMakeLists.txt
assignment-1-part2/.cache/clangd/index/: assimp_extras.h.4281923329FC7093.idx  main.cpp.D94F23776FC446E2.idx  model_loader.cpp.89D7FFD13F2667B0.idx  model_loader.h.C4E9D6276B056B15.idx
assignment-1-part2/models/Bob_Lamp/: Bob_Lamp.md5mesh
assignment-1-part2/models/Bowser's Castle/: cobKoopaCastle.dae
assignment-1-part2/models/Dwarf/: dwarf.x
assignment-1-part2/src/: main.cpp  model_loader.cpp
assignment-2/: CMakeLists.txt  Terrain.cpp  Terrain.eval  Terrain.frag  Terrain.vert  Terrain1.cont  Terrain1.frag  Terrain1.vert  bays.tga  browngrass.tga  grass.tga  main.cpp  normlise.py  sand.tga
assignment-2/.cache/clangd/index/: Terrain.cpp.E9508F6418514B47.idx  camera.h.393E579D07F165B8.idx  loadTGA.h.E058B3A821BDFB09.idx  main.cpp.679A773D6C6B284E.idx
assignment-2/models/KukuisBoat/: ev0421_sm_yacht_yacht.dae  ev0421_sm_yacht_yacht.smd
assignment-2/models/KukuisBoat/Overworld/: com_bm_yacht01.dae  com_bm_yacht01.smd
assignment-2/models/tower/: RadioTower.mtl
assignment-2/src/: camera.h  loadTGA.h  main.cpp  mesh.h  model.h  shader.h
assignment-2/src/shaders/: Terrain.cont  Terrain.frag  Terrain.tesc  Terrain.tese  Terrain.vert  imposter.frag  imposter.vert  model.frag  model.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert  terrain.geom
assignment-2/textures/: birtch.tga  birtch1.tga  bush.tga  grass.tga  pine.tga  pine1.tga  road.tga  water.tga
exerices-11/: CMakeLists.txt  OM_MeshViewer.cpp
exersices-6/: CMakeLists.txt  SkeletalAnimation.cpp  env.tga  green_metal.tga  loadTGA.h  models.cpp  models.h
exersices-6/.cache/clangd/index/: SkeletalAnimation.cpp.B7709BA56CA214EA.idx  assimp_extras.h.7CCAFB567CFAABC1.idx  camera.h.460D1C3C86259B42.idx  models.cpp.F05454F3EB977FB0.idx  (+1 more)
exersices-6/bvh/: 88_06.bvh  88_08.bvh  89_04.bvh  90_08.bvh  90_28.bvh  Test.bvh  cartwheel_backflip.bvh  jump_spin.bvh
(+59 files in other folders)
